syntax = "proto3";

package user;

service UserService {
  rpc Create (CreateUserRequest) returns (UserResponse);
  rpc FindByEmail (GetUserByEmailRequest) returns (UserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string birth_date = 4; // Formato ISO, ex.: "1990-01-01"
  string phone_number = 5;
  string gender = 6; // "M" ou "F"
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}